--- a/popup.css
+++ b/popup.css
@@ -1,13 +1,37 @@
 #main {
     position: relative;
-}
-
-table {
     width: 500px;
 }
 
-input, textarea {
-    width: 90%;
+h3 {
+    margin-bottom: 5px;
+}
+
+textarea {
+    overflow: hidden;
+}
+
+.format {
+    display: flex;
+}
+
+.input {
+    border: 1px solid #ccc;
+    padding: 5px;
+    border-radius: 2px 0 0 2px;
+    width: 70%;
+}
+
+.copy-btn {
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    border-left: none;
+    padding: 5px;
+    background-color: #f8f8f8;
+    border-radius: 0 2px 2px 0;
+    color: #444;
+    font-weight: bold;
 }
 
 #success-msg {
